[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watsonx-vision-toolkit"
version = "0.2.0"
description = "Reusable Python toolkit for vision-based document analysis using IBM Watsonx AI or Ollama"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AIQSO - Quinn Vidal", email = "quinn@aiqso.io" }
]
keywords = [
    "watsonx",
    "ibm",
    "vision",
    "llm",
    "document-analysis",
    "fraud-detection",
    "ocr",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
watsonx = [
    "langchain-ibm>=0.3.0",
    "ibm-watson-machine-learning>=1.0.0",
]
ollama = [
    "langchain-ollama>=0.2.0",
]
cli = [
    "click>=8.0.0",
]
all = [
    "watsonx-vision-toolkit[watsonx,ollama,cli]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "click>=8.0.0",
]

[project.scripts]
watsonx-vision = "watsonx_vision.cli:main"

[project.urls]
Homepage = "https://github.com/qvidal01/watsonx-vision-toolkit"
Documentation = "https://github.com/qvidal01/watsonx-vision-toolkit#readme"
Repository = "https://github.com/qvidal01/watsonx-vision-toolkit.git"
Issues = "https://github.com/qvidal01/watsonx-vision-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["watsonx_vision"]

[tool.hatch.build.targets.sdist]
include = [
    "/watsonx_vision",
    "/tests",
    "/examples",
    "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
